--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a data-toggle="tab" href="#menu1"><i class="fas fa-user"></i>About me</a></li>
     <li><a data-toggle="tab" href="#menu2"><i class="fas fa-cogs"></i>Skills</a></li>
     <li><a data-toggle="tab" href="#menu3"><i class="far fa-eye"></i>My projects</a></li>
-    <li><a data-toggle="tab" href="#menu3"><i class="fas fa-envelope"></i>Contact</a></li>
+    <li><a data-toggle="tab" href="#menu4"><i class="fas fa-envelope"></i>Contact</a></li>
   </ul>
 
   <div class="tab-content">
@@ -59,11 +59,36 @@
       </p>
     </div>
     <div id="menu2" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <h3>Skills</h3>
+      <p>Lenguajes</p>
+      <ol>
+        <li>JS(Angular, Node.js)</li>
+        <li>Python</li>
+        <li>C++</li>
+      </ol>
+      <p>WEB</p>
+      <ol>
+        <li>HTML5</li>
+        <li>CSS3(Bootstrap)</li>
+      </ol>
+      <p>Office</p>
+      <ol>
+        <li>MS Word</li>
+        <li>MS Excel</li>
+        <li>MS PowerPoint</li>
+      </ol>
+      <p>OS</p>
+      <ol>
+        <li>Linux</li>
+        <li>MS Windows</li>
+      </ol>
     </div>
     <div id="menu3" class="tab-pane fade">
-      <h3>Menu 3</h3>
+      <h3>My projects</h3>
+      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+    </div>
+    <div id="menu4" class="tab-pane fade">
+      <h3>Contact</h3>
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
   </div>
