--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
     <div id="menu4" class="tab-pane fade">
-      <h3>Contact</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <h3>Contact me</h3>
+      <label for="">Name</label>
+      <label for="">Email</label>
+      <label for="">Subject</label>
+      <label for="">Message</label>
+      <!-- Create a map with my ubication -->
     </div>
   </div>
 </div>
