--- a/index.html
+++ b/index.html
@@ -84,16 +84,81 @@
       </ol>
     </div>
     <div id="menu3" class="tab-pane fade">
-      <h3>My projects</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <div class="container">
+        <h2>Image Gallery</h2>
+        <p>The .thumbnail class can be used to display an image gallery.</p>
+        <p>The .caption class adds proper padding and a dark grey color to text inside thumbnails.</p>
+        <p>Click on the images to enlarge them.</p>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="/w3images/lights.jpg" target="_blank">
+                <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="/w3images/nature.jpg" target="_blank">
+                <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+                <div class="caption">
+                  <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="/w3images/fjords.jpg" target="_blank">
+                <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
+                <div class="caption">
+                  <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="menu4" class="tab-pane fade">
-      <h3>Contact me</h3>
-      <label for="">Name</label>
-      <label for="">Email</label>
-      <label for="">Subject</label>
-      <label for="">Message</label>
-      <!-- Create a map with my ubication -->
+
+      <section id="contact">
+        <div class="container">
+          <div class="well well-sm">
+            <h3><strong>Contact Us</strong></h3>
+          </div>
+
+      	<div class="row">
+      	  <div class="col-md-7">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3736489.7218514383!2d90.21589792292741!3d23.857125486636733!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1506502314230" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+
+            <div class="col-md-5">
+                <h4><strong>Get in Touch</strong></h4>
+              <form>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="" value="" placeholder="Name">
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" name="" value="" placeholder="E-mail">
+                </div>
+                <div class="form-group">
+                  <input type="tel" class="form-control" name="" value="" placeholder="Phone">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="" rows="3" placeholder="Message"></textarea>
+                </div>
+                <button class="btn btn-default" type="submit" name="button">
+                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Submit
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
 </div>
