--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Fiorella Effio Saldivar</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <p>Fiorella</p>
+  </header>
   <ul class="nav nav-tabs nav-justified">
     <li class="active"><a data-toggle="tab" href="#home"><i class="fas fa-home"></i> Home</a></li>
     <li><a data-toggle="tab" href="#menu1"><i class="fas fa-user"></i> About me</a></li>
@@ -23,8 +26,8 @@
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <h3>Hi, I'm Fiorella, web developer.</h3>
-      <p>Frontend Developer</p>
+
+
     </div>
     <div id="menu1" class="tab-pane fade">
       <h3>About me</h3>
@@ -172,10 +175,8 @@
     </div>
   </div>
 </div>
-
 <footer class="container-fluid text-center text-center bg-success text-white">
   <p>by Fiorella Effio Saldivar - 2018</p>
 </footer>
-
 </body>
 </html>
