--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <p>Fiorella</p>
-  </header>
   <ul class="nav nav-tabs nav-justified">
     <li class="active"><a data-toggle="tab" href="#home"><i class="fas fa-home"></i> Home</a></li>
     <li><a data-toggle="tab" href="#menu1"><i class="fas fa-user"></i> About me</a></li>
@@ -26,7 +23,9 @@
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-
+    <h1><strong>Hi, My name is Fiorella<br>
+      and I'm a web developer</strong></h1>
+    <p>Frontend developer</p>
 
     </div>
     <div id="menu1" class="tab-pane fade">
@@ -59,7 +58,7 @@
       </p>
       <p>
         We simulate a work environment to implement sucessful and proficient projects,
-        I invite you to see my projects in the that of My Projects.
+        I invite you to see my projects in the tab of My Projects.
       </p>
     </div>
     <div id="menu2" class="tab-pane fade">
@@ -175,8 +174,8 @@
     </div>
   </div>
 </div>
-<footer class="container-fluid text-center text-center bg-success text-white">
-  <p>by Fiorella Effio Saldivar - 2018</p>
+<footer class="container-fluid text-center text-center">
+  <p>by <strong>Fiorella Effio Saldivar - 2018</strong></p>
 </footer>
 </body>
 </html>
