--- a/index.html
+++ b/index.html
@@ -29,37 +29,51 @@
 
     </div>
     <div id="menu1" class="tab-pane fade">
-      <h3>About me</h3>
-      <p>
-        Everything started when I was studying Math at the University of San Marcos, there were
-        a lot of courses but the courses with which I felt passionate were Programming 1 and 2.
-      </p>
-      <p>
-        I have to say that since then I am passionate with technologies, I believe on the idea that
-        technologies can make our world a better place, it makes sense for me because you can do
-        whatever you want with code, also Google is doing it now, sharing information of everything
-        in Colombia with people who have only traditional cellphones.
-        <a href="https://www.youtube.com/watch?v=AJPV2MZCFNU" target="_blank">Here is the video, if you are interested in.</a>
-      </p>
-      <p>
-        I am motivated to keep learning to be part of this technological transformation and make a social impact
-        with those amazing technologies.
-      </p>
-      <p>
-        I admire the philosophy of Richard Stallman in terms of sharing knowledge because I think that
-        technology have to be accessible for everyone who wants to learn and have the passion to do it,
-        that is why I have a blog, here you can see my <a href="https://awebablog.wordpress.com/" target="_blank">posts.</a>
-      </p>
-      <p>
-        I studied in Laboratoria, there I learn how to be owner of my own learning and use the agile
-        methodology in order to create products at the same time with a design thinking process, that help me to
-        know that I can learn whatever technology I want and to create products that fits with the user needs
-        and not only do it by the way I think.
-      </p>
-      <p>
-        We simulate a work environment to implement sucessful and proficient projects,
-        I invite you to see my projects in the tab of My Projects.
-      </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="thumbnail">
+              <h3>About me</h3>
+              <p>
+                Everything started when I was studying Math at the University of San Marcos, there were
+                a lot of courses but the courses with which I felt passionate were Programming 1 and 2.
+              </p>
+              <p>
+                I have to say that since then I am passionate with technologies, I believe on the idea that
+                technologies can make our world a better place, it makes sense for me because you can do
+                whatever you want with code, also Google is doing it now, sharing information of everything
+                in Colombia with people who have only traditional cellphones.
+                <a href="https://www.youtube.com/watch?v=AJPV2MZCFNU" target="_blank">Here is the video, if you are interested in.</a>
+              </p>
+              <p>
+                I am motivated to keep learning to be part of this technological transformation and make a social impact
+                with those amazing technologies.
+              </p>
+              <p>
+                I admire the philosophy of Richard Stallman in terms of sharing knowledge because I think that
+                technology have to be accessible for everyone who wants to learn and have the passion to do it,
+                that is why I have a blog, here you can see my <a href="https://awebablog.wordpress.com/" target="_blank">posts.</a>
+              </p>
+              <p>
+                I studied in Laboratoria, there I learn how to be owner of my own learning and use the agile
+                methodology in order to create products at the same time with a design thinking process, that help me to
+                know that I can learn whatever technology I want and to create products that fits with the user needs
+                and not only do it by the way I think.
+              </p>
+              <p>
+                We simulate a work environment to implement sucessful and proficient projects,
+                I invite you to see my projects in the tab of My Projects.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="thumbnail">
+              <img src="fiore.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div id="menu2" class="tab-pane fade">
       <h3>Skills</h3>
