--- a/index.html
+++ b/index.html
@@ -143,33 +143,34 @@
     <div id="menu4" class="tab-pane fade">
 
       <section id="contact">
-        <div class="container">
+        <div class="container" id="contact-form">
           <h3><strong>Contact Me</strong></h3>
       	<div class="row">
       	  <div class="col-md-7">
               <iframe src="https://maps.google.com/maps?q=bellavista&t=k&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="col-md-5">
-                <h4><strong>Get in Touch</strong></h4>
-              <form>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="" value="" placeholder="Name">
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="" value="" placeholder="E-mail">
-                </div>
-                <div class="form-group">
-                  <input type="tel" class="form-control" name="" value="" placeholder="Phone">
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="" rows="3" placeholder="Message"></textarea>
-                </div>
-                <button class="btn btn-default" type="submit" name="button">
-                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Send
-                </button>
-              </form>
+              <h4><strong>Get in Touch</strong></h4>
+              <div class="form-group">
+                <input id="contactName" type="text" class="form-control" name="" value="" placeholder="Name">
+              </div>
+              <div class="form-group">
+                <input id="contactEmail" type="email" class="form-control" name="" value="" placeholder="E-mail">
+              </div>
+              <div class="form-group">
+                <input id="contactPhone"type="tel" class="form-control" name="" value="" placeholder="Phone">
+              </div>
+              <div class="form-group">
+                <textarea id="contactMessage"class="form-control" name="" rows="3" placeholder="Message"></textarea>
+              </div>
+              <button id="contactMe" class="btn btn-default" name="button">
+                  <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Send
+              </button>
             </div>
           </div>
+        </div>
+        <div class="" id="contact-thanks">
+          Muchas gracias por contactarme, te enviaré un mensaje lo más pronto posible.
         </div>
       </section>
         <div class="row" style="height:150px;">
@@ -191,5 +192,20 @@
 <footer class="container-fluid text-center text-center">
   <p>by <strong>Fiorella Effio Saldivar - 2018</strong></p>
 </footer>
+
+<script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDcwQNys27kyx-vfNzlT9C_hENOpk8Sa9c",
+    authDomain: "portafolio-fiore.firebaseapp.com",
+    databaseURL: "https://portafolio-fiore.firebaseio.com",
+    projectId: "portafolio-fiore",
+    storageBucket: "",
+    messagingSenderId: "1078549956117"
+  };
+  firebase.initializeApp(config);
+</script>
+<script src="src/js/contact.js"></script>
 </body>
 </html>
