--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fiorella Effio Saldivar</title>
     <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="style.css">
     <link href="src/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Custom fonts for this template -->
     <link href="src/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -22,7 +25,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Fiorella Effio</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
-          <i class="fas fa-bars"></i>
+          <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
@@ -49,9 +52,24 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
+
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Our Studio!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+          <div class="row text-center">
+            <div class="col-md-4" id="duration">
+              <div class="square el">
+                <img src="img/fiore.png" width="600px">
+                <h4 class="service-heading">Responsive Design</h4>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+              </span>
+              <h4 class="service-heading">Web Security</h4>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            </div>
+          </div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
         </div>
       </div>
@@ -145,48 +163,6 @@
             <div class="portfolio-caption">
               <h4>Finish</h4>
               <p class="text-muted">Identity</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
             </div>
           </div>
         </div>
@@ -383,7 +359,7 @@
         </div>
       </div>
     </section>
-    
+
     <!-- Contact -->
     <section id="contact">
       <div class="container">
@@ -400,7 +376,7 @@
                 <div class="col-md-6">
                   <div class="form-group text-center">
                     <a href="#">
-                      <i class="fa fa-phone"></i> +51 987362367
+                      <i class="fa fa-phone"></i>(+51) 987362367
                     </a>
                   </div>
                   <div class="form-group text-center">
@@ -428,17 +404,12 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
+                <a href="https://github.com/Fiorellaeffio" target="_blank">
+                  <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/fiorella-effio-saldivar/" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
@@ -486,7 +457,6 @@
       </div>
     </div>
 
-<<<<<<< HEAD
     <!-- Modal 2 -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
@@ -555,151 +525,6 @@
       </div>
     </div>
 
-    <!-- Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fas fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fas fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-=======
-      <section id="contact">
-        <div class="container" id="contact-form">
-          <h3><strong>Contact Me</strong></h3>
-      	<div class="row">
-      	  <div class="col-md-7">
-              <iframe src="https://maps.google.com/maps?q=bellavista&t=k&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-            <div class="col-md-5">
-              <h4><strong>Get in Touch</strong></h4>
-              <div class="form-group">
-                <input id="contactName" type="text" class="form-control" name="" value="" placeholder="Name">
-              </div>
-              <div class="form-group">
-                <input id="contactEmail" type="email" class="form-control" name="" value="" placeholder="E-mail">
-              </div>
-              <div class="form-group">
-                <input id="contactPhone"type="tel" class="form-control" name="" value="" placeholder="Phone">
-              </div>
-              <div class="form-group">
-                <textarea id="contactMessage"class="form-control" name="" rows="3" placeholder="Message"></textarea>
-              </div>
-              <button id="contactMe" class="btn btn-default" name="button">
-                  <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Send
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="" id="contact-thanks">
-          Muchas gracias por contactarme, te enviaré un mensaje lo más pronto posible.
-        </div>
-      </section>
-        <div class="row" style="height:150px;">
-          <div class="col-md-6">
-            <div class="text-white">
-            <i class="fas fa-phone mt-3"></i> <a href="tel:+">(+51) 987362367</a><br>
-            <i class="fa fa-envelope mt-3"></i> <a href="">fiorellaeffio.pe@gmail.com</a><br>
-            <i class="fas fa-globe mt-3"></i> Callao - Perú<br>
-            <div class="my-4">
-            <a href="https://www.linkedin.com/in/fiorella-effio-saldivar/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
-            <a href="https://github.com/Fiorellaeffio" target="_blank"><i class="fab fa-github fa-3x pr-4"></i></a>
->>>>>>> 422169df040f78859eaa0051babe260e4a0c6a28
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fas fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-<<<<<<< HEAD
-
     <!-- Bootstrap core JavaScript -->
     <script src="src/js/jquery.min.js"></script>
     <script src="src/js/bootstrap.bundle.min.js"></script>
@@ -710,30 +535,9 @@
     <script src="src/js/contact_me.js"></script>
     <!-- Custom scripts for this template -->
     <script src="src/js/agency.min.js"></script>
+    <script src="src/js/anime.min.js"></script>
+    <script src="src/js/animationHome.js"></script>
 
   </body>
 
-=======
-  </div>
-</div>
-<footer class="container-fluid text-center text-center">
-  <p>by <strong>Fiorella Effio Saldivar - 2018</strong></p>
-</footer>
-
-<script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDcwQNys27kyx-vfNzlT9C_hENOpk8Sa9c",
-    authDomain: "portafolio-fiore.firebaseapp.com",
-    databaseURL: "https://portafolio-fiore.firebaseio.com",
-    projectId: "portafolio-fiore",
-    storageBucket: "",
-    messagingSenderId: "1078549956117"
-  };
-  firebase.initializeApp(config);
-</script>
-<script src="src/js/contact.js"></script>
-</body>
->>>>>>> 422169df040f78859eaa0051babe260e4a0c6a28
 </html>
