añadiendo media querie para home

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
           <div class="row text-center">
             <div class="col-md-4" id="duration">
               <div class="square el">
-                <img src="img/fiore.png" width="600px">
-                <h4 class="service-heading">Responsive Design</h4>
+                <img src="img/fiore.png" class="img-responsive" width="250px">
               </div>
             </div>
-            <div class="col-md-6">
-              <span class="fa-stack fa-4x">
-                <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-              </span>
-              <h4 class="service-heading">Web Security</h4>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <div class="col-md-4">
+              <h1>Hi, I'm Fiorella</h1>
+              <p>Front-end developer</p>
+            </div>
+            <div class="col-md-4" id="reverse">
+              <div class="mysquare myel">
+                <img src="img/cerebro.png"  class="img-responsive" width="400px">
+              </div>
             </div>
           </div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Know me</a>
         </div>
       </div>
     </header>
