--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
+              <h4>Datadashboard</h4>
               <p class="text-muted">Illustration</p>
             </div>
           </div>
@@ -145,7 +145,7 @@
               <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
+              <h4>Toovida</h4>
               <p class="text-muted">Graphic Design</p>
             </div>
           </div>
@@ -159,7 +159,7 @@
               <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
+              <h4>FoodMap</h4>
               <p class="text-muted">Identity</p>
             </div>
           </div>
@@ -348,11 +348,27 @@
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-sm-4">
-            <img src="img/skills/javascript.jpg" alt="" width="80px">
-          </div>
-          <div class="progress col-sm-8">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+          <div class="skils col-md-12">
+            <span class="name">HTML & CSS</span>
+
+            <div class="progress">
+              <span data-progress="95" class="progress-bar bg-danger  progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+            <span class="name">Bootstrap</span>
+            <div class="progress">
+              <span data-progress="90" class="progress-bar bg-primary progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+            <span class="name">JQuery</span>
+            <div class="progress">
+              <span data-progress="85" class="progress-bar bg-success   progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+            <span class="name">SASS</span>
+            <div class="progress">
+              <span data-progress="40" class="progress-bar bg-warning   progress-bar-striped progress-bar-animated"></span>
+            </div>
           </div>
         </div>
       </div>
@@ -364,7 +380,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contáctame</h2>
+            <h2 class="section-heading text-uppercase">Let's get in touch</h2>
           </div>
         </div>
         <div class="row">
