add favicon fioreicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fiorella Effio Saldivar</title>
+    <link rel="icon" type="image/png" href="img/fioreicon.png" />
     <link rel="stylesheet" href="style.css">
     <link href="src/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,8 +19,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Fiorella Effio</a>
-        <input type="checkbox" id="toogle" /><label for="toogle"></label>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Fiorella Effio
+          <input type="checkbox" id="toogle" /><label for="toogle"></label>
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
