--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Fiorella Effio
+        <div class="navbar-brand js-scroll-trigger">
+          <a href="#page-top">Fiorella Effio</a>
           <input type="checkbox" id="toogle" /><label for="toogle"></label>
-        </a>
+        </div>
+
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
@@ -56,12 +58,13 @@
 
         <div class="intro-text">
           <div class="row text-center">
-            <div class="col-md-4" id="duration">
+            <div class="col-lg-4 col-md-6" id="duration">
               <div class="square el">
                 <img src="img/fiore.png" class="img-responsive" width="250px">
               </div>
+              <img src="img/fiore.png" class="img-responsive mediaScreen" width="250px">
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4 col-md-6">
               <h1>Hi, I'm Fiorella</h1>
               <p>Front-end developer</p>
             </div>
