--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           <div class="row text-center">
             <div class="col-lg-4 col-md-6" id="duration">
               <div class="square el">
-                <img src="img/fiore.png" class="img-responsive" width="250px">
+                <img src="img/fiore.png" class="img-responsive" width="80%">
               </div>
-              <img src="img/fiore.png" class="img-responsive mediaScreen" width="250px">
+              <img src="img/fiore.png" class="img-responsive mediaScreen" width="75%">
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 hello">
               <h1>Hi, I'm Fiorella</h1>
               <p>Front-end developer</p>
             </div>
