agregando funcionalidad para mostrar portafolio en 2 idiomas

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link js-scroll-trigger" href="#services">Soft-Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio"> <span class="spanish">Portafolio</span> <span class="english">Portfolio</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
@@ -552,6 +552,7 @@
     <script src="src/js/contact_me.js"></script>
     <script src="src/js/agency.min.js"></script>
     <script src="src/js/anime.min.js"></script>
+    <script src="src/js/language.js"></script>
     <script src="src/js/animationHome.js"></script>
   </body>
 </html>
