menu dos idiomas

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio"> <span class="spanish">Portafolio</span> <span class="english">Portfolio</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
+              <a class="nav-link js-scroll-trigger" href="#about"><span class="spanish">Sobre mí</span><span class="english">About Me</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Achievements</a>
+              <a class="nav-link js-scroll-trigger" href="#team"><span class="spanish">Logros</span><span class="english">Achievements</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#techSkills">Tech-Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact"><span class="spanish">Contacto</span><span class="english">Contact</span></a>
             </li>
           </ul>
         </div>
