agregando seccion contacto 2 idiomas

--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
               <img src="img/fiore.png" class="img-responsive mediaScreen" width="75%">
             </div>
             <div class="col-lg-4 col-md-6 hello">
-              <h1>Hi, I'm Fiorella</h1>
-              <p>Front-end developer</p>
+              <span class="spanish">
+                <h1>Hola, mi nombre es Fiorella</h1>
+                <p>Front-end developer</p>
+              </span>
+              <span class="english">
+                <h1>Hi, I'm Fiorella</h1>
+                <p>Front-end developer</p>
+              </span>
             </div>
             <div class="col-md-4" id="reverse">
               <div class="mysquare myel">
@@ -74,7 +80,7 @@
               </div>
             </div>
           </div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Know me</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services"> <span class="spanish">Conóceme</span> <span class="english">Know me</span> </a>
         </div>
       </div>
     </header>
@@ -84,8 +90,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Soft Skills</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Soft Skills </h2>
+            <h3 class="section-subheading text-muted">
+              <span class="spanish">Habilidades blandas: Aptitud, personalidad, valores.</span>
+              <span class="english">Soft skills: Attitude, personality, values</span>
+            </h3>
           </div>
         </div>
         <div class="row text-center">
@@ -94,7 +103,10 @@
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Teamwork</h4>
+            <h4 class="service-heading">
+              <span class="spanish">Trabajo en equipo</span>
+              <span class="english">Teamwork</span>
+            </h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
           <div class="col-md-4">
@@ -102,7 +114,10 @@
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Adaptability</h4>
+            <h4 class="service-heading">
+              <span class="spanish">Adaptabilidad</span>
+              <span class="english">Adaptability</span>
+            </h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
           <div class="col-md-4">
@@ -110,7 +125,10 @@
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Self learning</h4>
+            <h4 class="service-heading">
+              <span class="spanish">Autoaprendizaje</span>
+              <span class="english">Self learning</span>
+            </h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
         </div>
@@ -386,7 +404,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Let's get in touch</h2>
+            <h2 class="section-heading text-uppercase">
+              <span class="spanish">¡Contactémonos!</span>
+              <span class="english">Let's get in touch!</span>
+            </h2>
           </div>
         </div>
         <div class="row">
@@ -407,8 +428,11 @@
                   </div>
                 </div>
 
-                <div class="col-lg-12 text-center">
-                  <button id="downloadCV" class="btn btn-primary btn-xl text-uppercase">Descarga mi CV</button>
+                <div class="spanish col-lg-12 text-center">
+                  <button id="downloadResumeSPA" class="btn btn-primary btn-xl text-uppercase">Descarga mi CV</button>
+                </div>
+                <div class="english col-lg-12 text-center">
+                  <button id="downloadResumeEN" class="btn btn-primary btn-xl text-uppercase">Download my resume</button>
                 </div>
               </div>
           </div>
