--- a/index.html
+++ b/index.html
@@ -387,26 +387,95 @@
           </div>
         </div>
         <div class="row text-center">
+          <div class="col-md-12">
+            <h3>Lenguajes de Programación</h3>
+            <hr>
+          </div>
           <div class="skils col-md-12">
-            <span class="name">HTML & CSS</span>
+            <span class="name">Javascript (Angular, Node.js)</span>
 
             <div class="progress">
-              <span data-progress="95" class="progress-bar bg-danger  progress-bar-striped progress-bar-animated"></span>
+              <span data-progress="95" class="progress-bar progress-bar-striped progress-bar-animated"></span>
             </div>
 
-            <span class="name">Bootstrap</span>
+            <span class="name">C++ (Estructurado y POO)</span>
             <div class="progress">
-              <span data-progress="90" class="progress-bar bg-primary progress-bar-striped progress-bar-animated"></span>
+              <span data-progress="90" class="progress-bar progress-bar-striped progress-bar-animated"></span>
             </div>
 
-            <span class="name">JQuery</span>
+            <span class="name">Python</span>
             <div class="progress">
-              <span data-progress="85" class="progress-bar bg-success   progress-bar-striped progress-bar-animated"></span>
+              <span data-progress="85" class="progress-bar progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-12">
+            <br><br>
+            <h3>Web</h3>
+            <hr>
+          </div>
+          <div class="skils col-md-12">
+            <span class="name">HTML5</span>
+
+            <div class="progress">
+              <span data-progress="95" class="progress-bar progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+            <span class="name">CSS3 (Bootstrap, Materialize)</span>
+            <div class="progress">
+              <span data-progress="90" class="progress-bar progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-12">
+            <br><br>
+            <h3>SO (Sistemas operativos)</h3>
+            <hr>
+          </div>
+          <div class="skils col-md-12">
+            <span class="name">Linux</span>
+
+            <div class="progress">
+              <span data-progress="95" class="progress-bar progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+            <span class="name">Windows</span>
+            <div class="progress">
+              <span data-progress="90" class="progress-bar progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-12">
+            <br><br>
+            <h3>Oficina</h3>
+            <hr>
+          </div>
+          <div class="skils col-md-12">
+            <span class="name">Microsoft Word</span>
+
+            <div class="progress">
+              <span data-progress="95" class="progress-bar progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+            <span class="name">Microsoft PowerPoint</span>
+            <div class="progress">
+              <span data-progress="90" class="progress-bar progress-bar-striped progress-bar-animated"></span>
+            </div>
+
+            <span class="name">Microsoft Excel</span>
+            <div class="progress">
+              <span data-progress="85" class="progress-bar progress-bar-striped progress-bar-animated"></span>
             </div>
 
             <span class="name">SASS</span>
             <div class="progress">
-              <span data-progress="40" class="progress-bar bg-warning   progress-bar-striped progress-bar-animated"></span>
+              <span data-progress="40" class="progress-bar progress-bar-striped progress-bar-animated"></span>
             </div>
           </div>
         </div>
@@ -500,7 +569,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Datadashboard</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -508,6 +577,18 @@
                     <li>Date: January 2017</li>
                     <li>Client: Threads</li>
                     <li>Category: Illustration</li>
+                  </ul>
+                  <ul class="list-inline social-buttons">
+                    <li class="list-inline-item">
+                      <a href="https://fiorellaeffio.github.io/lim-2018-05-bc-core-am-datadashboard/src/index.html" target="_blank">
+                        <i class="far fa-eye"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="https://github.com/FiorellaEffio/lim-2018-05-bc-core-am-datadashboard" target="_blank">
+                        <i class="fab fa-github"></i>
+                      </a>
+                    </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
@@ -543,6 +624,18 @@
                     <li>Client: Explore</li>
                     <li>Category: Graphic Design</li>
                   </ul>
+                  <ul class="list-inline social-buttons">
+                    <li class="list-inline-item">
+                      <a href="https://fiorellaeffio.github.io/Bluetubers/src/" target="_blank">
+                        <i class="far fa-eye"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="https://github.com/FiorellaEffio/Bluetubers" target="_blank">
+                        <i class="fab fa-github"></i>
+                      </a>
+                    </li>
+                  </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
                     Close Project</button>
@@ -577,6 +670,18 @@
                     <li>Client: Finish</li>
                     <li>Category: Identity</li>
                   </ul>
+                  <ul class="list-inline social-buttons">
+                    <li class="list-inline-item">
+                      <a href="https://fiorellaeffio.github.io/lim-2018-01-foodmap/index.html" target="_blank">
+                        <i class="far fa-eye"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="https://github.com/FiorellaEffio/lim-2018-01-foodmap" target="_blank">
+                        <i class="fab fa-github"></i>
+                      </a>
+                    </li>
+                  </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
                     Close Project</button>
@@ -596,5 +701,6 @@
     <script src="src/js/anime.min.js"></script>
     <script src="src/js/language.js"></script>
     <script src="src/js/animationHome.js"></script>
+    <script src="src/js/skills.js"></script>
   </body>
 </html>
