soft skills y home completo 2 idiomas

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
     </header>
 
-    <!-- Services -->
+    <!-- Soft skills -->
     <section id="services">
       <div class="container">
         <div class="row">
@@ -107,7 +107,10 @@
               <span class="spanish">Trabajo en equipo</span>
               <span class="english">Teamwork</span>
             </h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">
+              <span class="spanish">Si caminas solo, llegarás rápido; si caminas acompañado, llegarás más lejos.</span>
+              <span class="english">If you want to go fast, go alone. If you want to go far, go together.</span>
+            </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -118,7 +121,10 @@
               <span class="spanish">Adaptabilidad</span>
               <span class="english">Adaptability</span>
             </h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">
+              <span class="spanish">No puede impedirse que sople el viento. Pero pueden construirse molinos.</span>
+              <span class="english">It can not be stopped from blowing the wind. But mills can be built.</span>
+            </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -129,7 +135,10 @@
               <span class="spanish">Autoaprendizaje</span>
               <span class="english">Self learning</span>
             </h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">
+              <span class="spanish">El camino de la luz es la búsqueda del conocimiento.</span>
+              <span class="english">The path of light is the quest for knowledge.</span>
+            </p>
           </div>
         </div>
       </div>
@@ -197,7 +206,7 @@
       </div>
     </section>
 
-    <!-- About -->
+    <!-- About Me -->
     <section id="about">
       <div class="container">
         <div class="row">
@@ -222,10 +231,20 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>2014-2016</h4>
-                    <h4 class="subheading">The beginning</h4>
+                    <h4 class="subheading">
+                      <span class="spanish">Mi primer lenguaje</span>
+                      <span class="english">My first language</span>
+                    </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Everything started when I was studying Math at the University of San Marcos, there were a lot of courses but the courses with which I felt passionate were Programming 1 and 2.</p>
+                    <p class="text-muted">
+                      <span class="spanish">
+                        Todo empezó cuando estuve estudiando Matemática en la Universidad Nacional Mayor de San Marcos, habian muchos cursos en la carrera pero por los que senti mucha pasión fueron los que incluían programación. Me empecé a interesar muchísimo en el código porque plasmando mi lógica en código descubrí que podía resolver cualquier problema.
+                      </span>
+                      <span class="english">
+                        Everything started when I was studying Math at the University of San Marcos, there were a lot of courses but the courses with which I felt passionate were Programming 1 and 2. I started to felt so passionate about code because by building my logic in code I discovered that I could solve any problem with code.
+                      </span>
+                    </p>
                   </div>
                 </div>
               </li>
@@ -236,15 +255,19 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>July 2016</h4>
-                    <h4 class="subheading">The passion started</h4>
+                    <h4 class="subheading">
+                      <span class="spanish">Buscando el código</span>
+                      <span class="english">Get involved with code</span>
+                    </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I have to say that since then I am passionate with technologies, I believe on the idea that
-                    technologies can make our world a better place, it makes sense for me because you can do
-                    whatever you want with code.</p>
                     <p class="text-muted">
+                      <span class="spanish">Desde entonces comencé a buscar comunidades de gente que sea programadora, en ese entonces postulé al CoreUpGrade2016 del grupo de programación Hackspace en Lima Perú y fui aceptada</span>
+                      <span class="english">I have to say that since then I am passionate with technologies, I believe on the idea that
+                    technologies can make our world a better place, it makes sense for me because you can do
+                    whatever you want with code.
                       I am motivated to keep learning to be part of this technological transformation and make a social impact
-                      with those amazing technologies.
+                      with those amazing technologies.</span>
                     </p>
                   </div>
                 </div>
