about me ready 2 languages

--- a/index.html
+++ b/index.html
@@ -254,7 +254,10 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>July 2016</h4>
+                    <h4>
+                      <span class="spanish">Julio 2016</span>
+                      <span class="english">July 2016</span>
+                    </h4>
                     <h4 class="subheading">
                       <span class="spanish">Buscando el código</span>
                       <span class="english">Get involved with code</span>
@@ -262,12 +265,8 @@
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
-                      <span class="spanish">Desde entonces comencé a buscar comunidades de gente que sea programadora, en ese entonces postulé al CoreUpGrade2016 del grupo de programación Hackspace en Lima Perú y fui aceptada</span>
-                      <span class="english">I have to say that since then I am passionate with technologies, I believe on the idea that
-                    technologies can make our world a better place, it makes sense for me because you can do
-                    whatever you want with code.
-                      I am motivated to keep learning to be part of this technological transformation and make a social impact
-                      with those amazing technologies.</span>
+                      <span class="spanish">Desde entonces comencé a buscar comunidades de gente que sea programadora, en ese entonces postulé al CoreUpGrade2016 del grupo de programación Hackspace en Lima Perú y fui aceptada. Y así fue como poco a poco comencé a interesarme más y más.</span>
+                      <span class="english">Since then I started to look for opportunities to get involved in programming communities, that is why I aplied for the CoreUpGrade2016 at Hackspace in Lima Peru and I was accepted. And that is how I started to find my way in the code.</span>
                     </p>
                   </div>
                 </div>
@@ -278,19 +277,18 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>November 2017</h4>
-                    <h4 class="subheading">A coder is born</h4>
+                    <h4>
+                      <span class="spanish">Noviembre 2017</span>
+                      <span class="english">November 2017</span>
+                    </h4>
+                    <h4 class="subheading">
+                      <span class="spanish">Nació una programadora</span>
+                      <span class="english">A coder was born</span>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
-                      I studied in Laboratoria, there I learn how to be owner of my own learning and use the agile
-                      methodology in order to create products at the same time with a design thinking process, that help me to
-                      know that I can learn whatever technology I want and to create products that fits with the user needs
-                      and not only do it by the way I think.
-                    </p>
-                    <p class="text-muted">
-                      We simulate a work environment to implement sucessful and proficient projects,
-                      I invite you to see my projects in the tab of My Projects.
+                      <span class="spanish">Después de Hackspace, se presentó una oportunidad de seguir afianzando mis conocimientos especialmente todo lo que tiene que ver con código libre y postulé a PeruRumboGSoC2018 en LinuXatUni y fui ganadora recibiendo un curso online de administración de sistemas Linux, <a href="https://awebablog.wordpress.com/" arget="_blank">aquí</a> puedes ver mis publicaciones. Fue ahí donde me di cuenta que definitivamente programar era lo mío.</span>
+                      <span class="english">After Hackspace, an opportunity came to me to improve my programming skills and to get involved in the world of the open source, so I aplied for PeruRumboGSoC2018 at LinuXatUNI and I won, receiving an online course of Linux System Administration, <a href="https://awebablog.wordpress.com/" arget="_blank">here</a> you can see my posts. In that moment I realize that definitely programming was for me.</span>
                     </p>
                   </div>
                 </div>
@@ -301,23 +299,31 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>September 2018 - Now</h4>
-                    <h4 class="subheading">Challenge Accepted!</h4>
+                    <h4>
+                      <span class="spanish">Mayo 2018 - Actualidad.</span>
+                      <span class="english">May 2018 - Now.</span>
+                    </h4>
+                    <h4 class="subheading">
+                      <span class="spanish">¡Reto aceptado!</span>
+                      <span class="english">Challenge accepted!</span>
+                    </h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
-                      I admire the philosophy of Richard Stallman in terms of sharing knowledge because I think that
-                      technology have to be accessible for everyone who wants to learn and have the passion to do it,
-                      that is why I have a blog, here you can see my <a href="https://awebablog.wordpress.com/" target="_blank">posts.</a>
+                      <span class="spanish">Esta vez quise apostar por una carrera en tecnología, así que decidí postular a Laboratoria y fui ahí donde confirmé y afiancé mi pasión por la tecnología. Mi motivación es ser parte de toda esta transformación tecnológica, generar un impacto social con todo lo que aprendo y crear soluciones que ayuden a la sociedad.</span>
+                      <span class="english">This time I wanted to take a risk and begin a career in technology, so I decided to apply for Laboratoria, there I reaffirm my passion about technology. I am motivated to keep learning to be part of this technological transformation, make a social impact with all the things that I can learn and create solutions for the society.</span>
                     </p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4>Be Part
+                  <h4 class="english">Be Part
                     <br>Of My
                     <br>Story!</h4>
+                  <h4 class="spanish">¡Sé parte
+                    <br>de mi
+                    <br>historia!</h4>
                 </div>
               </li>
             </ul>
@@ -593,9 +599,13 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Datadashboard</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>
+                    <span class="spanish">Esta aplicación procesa información relevante acerca del progreso de las alumnas de Laboratoria para las Training Managers (TMs) con el fin de analizar de manera visual y tener un mejor entendimiento para poder apoyar a las alumnas en su aprendizaje, asimismo se puede ver estadisticas generales por cohort o tambien de manera individual por cada alumna.
+
+Con esta aplicación se busca mejorar la manera en como las Training managers tienen acceso a la información, pasando del problema de manejar la data en bruto a poder comprender y tomar decisiones mas rápidas y complejas en base a datos mas simples y sencillos. Finalmente estamos usando un dashboard el cual se define como un espacio desde el cual un usuario puede tener acceso a la información y controles más relevantes.</span>
+                    <span class="english"></span>
+                  </p>
                   <ul class="list-inline">
                     <li>Date: January 2017</li>
                     <li>Client: Threads</li>
@@ -638,7 +648,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Toovida</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -684,7 +694,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Food-map</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
